[tool.poetry]
name = "youtube"
version = "0.1.0"
description = ""
authors = ["Oskar Seweryn <seweryn.oskar@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytube = "^15.0.0"
moviepy = "^1.0.3"
ipykernel = "^6.29.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
